--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>goit-markup-hw-01</title>
+    <title>goit-markup-hw-08</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="./css/main.min.css">
 </head>
 <body>
-    <header class="header">
+    <!-- <header class="header">
         <div class="container main-nav">
             <a href="./index.html" class="logo">Web<span class="logo-header">Studio</span></a>
             <nav class="site-nav">
@@ -36,7 +36,8 @@
                 </li>
             </ul>
         </div>
-    </header>
+    </header> -->
+
     <main>
         <section class="section hero">
             <div class="container">
@@ -97,8 +98,9 @@
                         </form>
                     </div>
                 </div>
-            </div>
+            </div> -->
         </section>
+
         <section class="section benefits">
             <div class="container"> 
                 <h2 hidden class="section-title">Особливості</h2>
@@ -142,7 +144,8 @@
                 </ul>
             </div>
         </section>
-        <section class="section work">
+
+        <!-- <section class="section work">
             <div class="container">
                 <h2 class="work__title">Чим ми займаємося</h2>
                 <ul class="work__list list">
@@ -167,6 +170,7 @@
                 </ul>
             </div>
         </section>
+         -->
         <section class="section team">
             <div class="container">
                 <h2 class="team__title">Наша команда</h2>
@@ -176,7 +180,7 @@
                         <h3 class="team__name">Ігор Дем'яненко</h3>
                         <p class="team__position">Product Designer</p>
                         <ul class="member__list">
-                            <li class="member__item">
+                            <!-- <li class="member__item">
                                 <a class="member__link link" href="#">
                                     <svg class="member__icon" width="20" height="20">
                                         <use href="./images/icons.svg#icon-instagram"></use>
@@ -203,7 +207,7 @@
                                         <use href="./images/icons.svg#icon-linkedin"></use>
                                     </svg>
                                 </a>
-                            </li>
+                            </li> -->
                         </ul>
                     </li>
                     <li class="team__member">
@@ -211,7 +215,7 @@
                         <h3 class="team__name">Ольга Рєпіна</h3>
                         <p class="team__position">Frontend Developer</p>
                         <ul class="member__list">
-                            <li class="member__item">
+                            <!-- <li class="member__item">
                                 <a class="member__link link" href="#">
                                     <svg class="member__icon" width="20" height="20">
                                         <use href="./images/icons.svg#icon-instagram"></use>
@@ -238,7 +242,7 @@
                                         <use href="./images/icons.svg#icon-linkedin"></use>
                                     </svg>
                                 </a>
-                            </li>
+                            </li> -->
                         </ul>
                     </li>
                     <li class="team__member">
@@ -246,7 +250,7 @@
                         <h3 class="team__name">Микола Тарасов</h3>
                         <p class="team__position">Marketing</p>
                         <ul class="member__list">
-                            <li class="member__item">
+                            <!-- <li class="member__item">
                                 <a class="member__link link" href="#">
                                     <svg class="member__icon" width="20" height="20">
                                         <use href="./images/icons.svg#icon-instagram"></use>
@@ -273,7 +277,7 @@
                                         <use href="./images/icons.svg#icon-linkedin"></use>
                                     </svg>
                                 </a>
-                            </li>
+                            </li> -->
                         </ul>
                     </li>
                     <li class="team__member">
@@ -281,7 +285,7 @@
                         <h3 class="team__name">Михайло Єрмаков</h3>
                         <p class="team__position">UI Designer</p>
                         <ul class="member__list">
-                            <li class="member__item">
+                            <!-- <li class="member__item">
                                 <a class="member__link link" href="#">
                                     <svg class="member__icon" width="20" height="20">
                                         <use href="./images/icons.svg#icon-instagram"></use>
@@ -308,12 +312,13 @@
                                         <use href="./images/icons.svg#icon-linkedin"></use>
                                     </svg>
                                 </a>
-                            </li>
+                            </li> -->
                         </ul>
                     </li>
                 </ul>
             </div>
         </section>
+
         <section class="clients">
             <div class="container">
                 <h2 class="clients__title">Постійні клієнти</h2>
@@ -364,7 +369,8 @@
             </div>
         </section>
     </main>
-    <footer class="footer" style="padding: 60px 0px;">
+
+    <!-- <footer class="footer" style="padding: 60px 0px;">
         <div class="container footer-container">
             <div class="adr">
                 <a href="./index.html" class="logo-footer">Web<span class="logo-footer-secondary">Studio</span></a>
@@ -429,7 +435,7 @@
                 </button>
             </form>
         </div>
-    </footer>
+    </footer> -->
     <script src="./js/modal.js"></script>
 </body>
 </html>
