--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
             </div>
         </section>
 
-        <!-- <section class="section work">
+        <section class="section work">
             <div class="container">
                 <h2 class="work__title">Чим ми займаємося</h2>
                 <ul class="work__list list">
@@ -170,7 +170,7 @@
                 </ul>
             </div>
         </section>
-         -->
+        
         <section class="section team">
             <div class="container">
                 <h2 class="team__title">Наша команда</h2>
