add pictures for team

--- a/index.html
+++ b/index.html
@@ -176,7 +176,18 @@
                 <h2 class="team__title">Наша команда</h2>
                 <ul class="team__list">
                     <li class="team__member">
-                        <img src="./images/igor.jpg" alt="Ігор посміхається" width="270" height="260" style="display: block;">
+                        <picture>
+                            <source srcset="./images/igor-desk.jpg 1x, ./images/igor-desk-2x.jpg 2x" 
+                            media="(min-width: 1200px)" />
+                            <source srcset="./images/igor-tab.jpg 1x, ./images/igor-tab-2x.jpg 2x" 
+                            media="(min-width: 768px)"  />
+                            <source srcset="./images/igor-mob.jpg 1x, ./images/igor-mob-2x.jpg 2x" 
+                            media="(max-width: 767px)"  />
+                            <img 
+                            src="./images/igor.jpg" 
+                            alt="Ігор посміхається" 
+                            width="270" height="260" style="display: block;">
+                        </picture>
                         <h3 class="team__name">Ігор Дем'яненко</h3>
                         <p class="team__position">Product Designer</p>
                         <ul class="member__list">
@@ -211,7 +222,17 @@
                         </ul>
                     </li>
                     <li class="team__member">
-                        <img src="./images/olga.jpg" alt="Ольга посміхається" width="270" height="260" style="display: block;">
+                        <picture>
+                            <source srcset="./images/olga-desk.jpg 1x, ./images/olga-desk-2x.jpg 2x" 
+                            media="(min-width: 1200px)" />
+                            <source srcset="./images/olga-tab.jpg 1x, ./images/olga-tab-2x.jpg 2x" 
+                            media="(min-width: 768px)"  />
+                            <source srcset="./images/olga-mob.jpg 1x, ./images/olga-mob-2x.jpg 2x" 
+                            media="(max-width: 767px)"  />
+                            <img src="./images/olga.jpg" 
+                            alt="Ольга посміхається" 
+                            width="270" height="260" style="display: block;">
+                        </picture>
                         <h3 class="team__name">Ольга Рєпіна</h3>
                         <p class="team__position">Frontend Developer</p>
                         <ul class="member__list">
@@ -246,7 +267,17 @@
                         </ul>
                     </li>
                     <li class="team__member">
-                        <img src="./images/mukola.jpg" alt="Микола посміхається" width="270" height="260" style="display: block;">
+                        <picture>
+                            <source srcset="./images/mukola-desk.jpg 1x, ./images/mukola-desk-2x.jpg 2x" 
+                            media="(min-width: 1200px)" />
+                            <source srcset="./images/mukola-tab.jpg 1x, ./images/mukola-tab-2x.jpg 2x" 
+                            media="(min-width: 768px)"  />
+                            <source srcset="./images/mukola-mob.jpg 1x, ./images/mukola-mob-2x.jpg 2x" 
+                            media="(max-width: 767px)"  />
+                            <img src="./images/mukola.jpg" 
+                            alt="Микола посміхається" 
+                            width="270" height="260" style="display: block;">
+                        </picture>
                         <h3 class="team__name">Микола Тарасов</h3>
                         <p class="team__position">Marketing</p>
                         <ul class="member__list">
@@ -281,7 +312,17 @@
                         </ul>
                     </li>
                     <li class="team__member">
-                        <img src="./images/mikhailo.jpg" alt="Михайло посміхається" width="270" height="260" style="display: block;">
+                        <picture>
+                            <source srcset="./images/mikhailo-desk.jpg 1x, ./images/mikhailo-desk-2x.jpg 2x" 
+                            media="(min-width: 1200px)" />
+                            <source srcset="./images/mikhailo-tab.jpg 1x, ./images/mikhailo-tab-2x.jpg 2x" 
+                            media="(min-width: 768px)"  />
+                            <source srcset="./images/mikhailo-mob.jpg 1x, ./images/mikhailo-mob-2x.jpg 2x" 
+                            media="(max-width: 767px)"  />
+                            <img src="./images/mikhailo.jpg" 
+                            alt="Михайло посміхається" 
+                            width="270" height="260" style="display: block;">
+                        </picture>
                         <h3 class="team__name">Михайло Єрмаков</h3>
                         <p class="team__position">UI Designer</p>
                         <ul class="member__list">
