add mobile first for team

--- a/index.html
+++ b/index.html
@@ -184,9 +184,9 @@
                             <source srcset="./images/igor-mob.jpg 1x, ./images/igor-mob-2x.jpg 2x" 
                             media="(max-width: 767px)"  />
                             <img 
-                            src="./images/igor.jpg" 
+                            src="./images/igor-mob.jpg" 
                             alt="Ігор посміхається" 
-                            width="270" height="260" style="display: block;">
+                            width="450" style="display: block;">
                         </picture>
                         <h3 class="team__name">Ігор Дем'яненко</h3>
                         <p class="team__position">Product Designer</p>
@@ -229,9 +229,9 @@
                             media="(min-width: 768px)"  />
                             <source srcset="./images/olga-mob.jpg 1x, ./images/olga-mob-2x.jpg 2x" 
                             media="(max-width: 767px)"  />
-                            <img src="./images/olga.jpg" 
+                            <img src="./images/olga-mob.jpg" 
                             alt="Ольга посміхається" 
-                            width="270" height="260" style="display: block;">
+                            width="450" style="display: block;">
                         </picture>
                         <h3 class="team__name">Ольга Рєпіна</h3>
                         <p class="team__position">Frontend Developer</p>
@@ -274,9 +274,9 @@
                             media="(min-width: 768px)"  />
                             <source srcset="./images/mukola-mob.jpg 1x, ./images/mukola-mob-2x.jpg 2x" 
                             media="(max-width: 767px)"  />
-                            <img src="./images/mukola.jpg" 
+                            <img src="./images/mukola-mob.jpg" 
                             alt="Микола посміхається" 
-                            width="270" height="260" style="display: block;">
+                            width="450" style="display: block;">
                         </picture>
                         <h3 class="team__name">Микола Тарасов</h3>
                         <p class="team__position">Marketing</p>
@@ -319,9 +319,9 @@
                             media="(min-width: 768px)"  />
                             <source srcset="./images/mikhailo-mob.jpg 1x, ./images/mikhailo-mob-2x.jpg 2x" 
                             media="(max-width: 767px)"  />
-                            <img src="./images/mikhailo.jpg" 
+                            <img src="./images/mikhailo-mob.jpg" 
                             alt="Михайло посміхається" 
-                            width="270" height="260" style="display: block;">
+                            width="450" style="display: block;">
                         </picture>
                         <h3 class="team__name">Михайло Єрмаков</h3>
                         <p class="team__position">UI Designer</p>
