start to do mob-menu

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="./css/main.min.css">
 </head>
 <body>
-    <!-- <header class="header">
+    <header class="header">
         <div class="container main-nav">
             <a href="./index.html" class="logo">Web<span class="logo-header">Studio</span></a>
             <nav class="site-nav">
@@ -35,8 +35,75 @@
                         </svg>+38 096 111 11 11</a>
                 </li>
             </ul>
+            <button type="button" class="menu-button menu-open" data-menu-open>
+                <svg width="40" height="40" aria-label="">
+                    <use href="./images/icons.svg#icon-menu" class="icon-menu"></use>
+                </svg>
+            </button>
         </div>
-    </header> -->
+        <div class="mob-menu">
+            <button type="button" class="menu-close" data-menu-close>
+                <svg width="40" height="40">
+                    <use href="./images/icons.svg#icon-menu-close" class="icon-menu-close"></use>
+                </svg>
+            </button>
+            <ul class="menu-list">
+                <li class="menu-list__item"><a href="./index.html" class="menu-list__link">Студія</a></li>
+                <li class="menu-list__item"><a href="./portfolio.html" class="menu-list__link">Портфоліо</a></li>
+                <li class="menu-list__item"><a href="#" class="menu-list__link">Контакти</a></li>
+            </ul>
+            <!-- <ul class="contact">
+                <li class="item"> -->
+                    <a href="mailto:info@devstudio.com" class="mob-menu__contact">info@devstudio.com</a>
+                <!-- </li>
+                <li class="item"> -->
+                    <a href="tel:+380961111111" class="mob-menu__contact">+38 096 111 11 11</a>
+                <!-- </li>
+            </ul> -->
+        </div>
+        <!-- <div class="mobile-menu is-hidden" data-menu>
+            <button type="button" class="menu-button menu-button__close" data-menu-close>
+                <svg width="40" height="40" aria-label="Закрити мобільне меню">
+                    <use href="./images/icons.svg#icon-menu-close" class="icon-menu-close"></use>
+                </svg>
+            </button>
+
+            <div class="menu">
+                <ul class="list menu__list">
+                    <li class="menu__item"><a href="./index.html" class="menu__link link">Студія</a></li>
+                    <li class="menu__item"><a href="./portfolio.html" class="menu__link link">Портфоліо</a></li>
+                    <li class="menu__item"><a href="./contacts.html" class="menu__link link">Контакти</a></li>
+                </ul>
+            </div>
+
+            <div class="contacts-group">
+                <div class="contacts">
+                    <ul class="list contacts__list">
+                        <li class="contacts__item">
+                            <svg class="contacts__icon contacts__icon--tel" width="10" height="16" aria-label="Телефон">
+                                <use href="./images/icons.svg#icon-tel"></use>
+                            </svg>
+                            <a href="tel:+380961111111" class="link contacts__link tel">+38 096 111 11 11</a></li>
+                        <li class="contacts__item">
+                            <svg class="contacts__icon contacts__icon--mail" width="16" height="12" aria-label="Пошта">
+                                <use href="./images/icons.svg#icon-mail"></use>
+                            </svg>
+                            <a href="mailto:info@devstudio.com" class="link contacts__link mail">info@devstudio.com</a></li>
+                    </ul>
+                </div>
+    
+                <div class="social-link">
+                    <ul class="list social-link__list">
+                        <li class="social-link__item"><a href="" class="social-link__link link" target="_blank" rel="noreferrer noopener">Instagram</a></li>
+                        <li class="social-link__item"><a href="" class="social-link__link link" target="_blank" rel="noreferrer noopener">Twitter</a></li>
+                        <li class="social-link__item"><a href="" class="social-link__link link" target="_blank" rel="noreferrer noopener">Facebook</a></li>
+                        <li class="social-link__item"><a href="" class="social-link__link link" target="_blank" rel="noreferrer noopener">LinkedIn</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div> -->
+    </header>
 
     <main>
         <section class="section hero">
