--- a/index.html
+++ b/index.html
@@ -60,6 +60,14 @@
                     <a href="tel:+380961111111" class="mob-menu__contact">+38 096 111 11 11</a>
                 <!-- </li>
             </ul> -->
+            <!-- <div class="social-link"> -->
+                <ul class="mob-soc">
+                    <li class="mob-soc__item"><a href="" class="mob-soc__link link" target="_blank" rel="noreferrer noopener">Instagram</a></li>
+                    <li class="mob-soc__item"><a href="" class="mob-soc__link link" target="_blank" rel="noreferrer noopener">Twitter</a></li>
+                    <li class="mob-soc__item"><a href="" class="mob-soc__link link" target="_blank" rel="noreferrer noopener">Facebook</a></li>
+                    <li class="mob-soc__item"><a href="" class="mob-soc__link link" target="_blank" rel="noreferrer noopener">LinkedIn</a></li>
+                </ul>
+            <!-- </div> -->
         </div>
         <!-- <div class="mobile-menu is-hidden" data-menu>
             <button type="button" class="menu-button menu-button__close" data-menu-close>
@@ -92,14 +100,7 @@
                     </ul>
                 </div>
     
-                <div class="social-link">
-                    <ul class="list social-link__list">
-                        <li class="social-link__item"><a href="" class="social-link__link link" target="_blank" rel="noreferrer noopener">Instagram</a></li>
-                        <li class="social-link__item"><a href="" class="social-link__link link" target="_blank" rel="noreferrer noopener">Twitter</a></li>
-                        <li class="social-link__item"><a href="" class="social-link__link link" target="_blank" rel="noreferrer noopener">Facebook</a></li>
-                        <li class="social-link__item"><a href="" class="social-link__link link" target="_blank" rel="noreferrer noopener">LinkedIn</a></li>
-                    </ul>
-                </div>
+                
             </div>
         </div>
     </div> -->
