--- a/index.html
+++ b/index.html
@@ -42,32 +42,28 @@
             </button>
         </div>
         <div class="mob-menu">
-            <button type="button" class="menu-close" data-menu-close>
-                <svg width="40" height="40">
-                    <use href="./images/icons.svg#icon-menu-close" class="icon-menu-close"></use>
-                </svg>
-            </button>
-            <ul class="menu-list">
-                <li class="menu-list__item"><a href="./index.html" class="menu-list__link">Студія</a></li>
-                <li class="menu-list__item"><a href="./portfolio.html" class="menu-list__link">Портфоліо</a></li>
-                <li class="menu-list__item"><a href="#" class="menu-list__link">Контакти</a></li>
-            </ul>
-            <!-- <ul class="contact">
-                <li class="item"> -->
-                    <a href="mailto:info@devstudio.com" class="mob-menu__contact">info@devstudio.com</a>
-                <!-- </li>
-                <li class="item"> -->
-                    <a href="tel:+380961111111" class="mob-menu__contact">+38 096 111 11 11</a>
-                <!-- </li>
-            </ul> -->
-            <!-- <div class="social-link"> -->
+            <div class="container">
+                <button type="button" class="menu-close" data-menu-close>
+                    <svg width="40" height="40">
+                        <use href="./images/icons.svg#icon-menu-close" class="icon-menu-close"></use>
+                    </svg>
+                </button>
+                <ul class="menu-list">
+                    <li class="menu-list__item"><a href="./index.html" class="menu-list__link link">Студія</a></li>
+                    <li class="menu-list__item"><a href="./portfolio.html" class="menu-list__link link">Портфоліо</a></li>
+                    <li class="menu-list__item"><a href="#" class="menu-list__link link">Контакти</a></li>
+                </ul>
+                
+                <a href="tel:+380961111111" class="mob-menu__tel">+38 096 111 11 11</a>
+                <a href="mailto:info@devstudio.com" class="mob-menu__email">info@devstudio.com</a>
+                    
                 <ul class="mob-soc">
                     <li class="mob-soc__item"><a href="" class="mob-soc__link link" target="_blank" rel="noreferrer noopener">Instagram</a></li>
                     <li class="mob-soc__item"><a href="" class="mob-soc__link link" target="_blank" rel="noreferrer noopener">Twitter</a></li>
                     <li class="mob-soc__item"><a href="" class="mob-soc__link link" target="_blank" rel="noreferrer noopener">Facebook</a></li>
                     <li class="mob-soc__item"><a href="" class="mob-soc__link link" target="_blank" rel="noreferrer noopener">LinkedIn</a></li>
                 </ul>
-            <!-- </div> -->
+            </div>
         </div>
         <!-- <div class="mobile-menu is-hidden" data-menu>
             <button type="button" class="menu-button menu-button__close" data-menu-close>
