add mob-soc-item border

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 </svg>
             </button>
         </div>
-        <div class="mob-menu">
+        <div class="mob-menu is-hidden" data-menu>
             <div class="container">
                 <button type="button" class="menu-close" data-menu-close>
                     <svg width="40" height="40">
