--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         </svg>+38 096 111 11 11</a>
                 </li>
             </ul>
-            <button type="button" class="menu-button menu-open" data-menu-open>
+            <button type="button" class="menu-button menu-open" data-menu-button>
                 <svg width="40" height="40" aria-label="">
                     <use href="./images/icons.svg#icon-menu" class="icon-menu"></use>
                 </svg>
@@ -43,26 +43,31 @@
         </div>
         <div class="mob-menu is-hidden" data-menu>
             <div class="container">
-                <button type="button" class="menu-close" data-menu-close>
-                    <svg width="40" height="40">
-                        <use href="./images/icons.svg#icon-menu-close" class="icon-menu-close"></use>
+                <div class="mob-menu-top">
+                    <button type="button" class="menu-close" data-menu-close>
+                        <svg width="40" height="40">
+                            <use href="./images/icons.svg#icon-menu-close" class="icon-menu-close"></use>
                     </svg>
-                </button>
-                <ul class="menu-list">
-                    <li class="menu-list__item"><a href="./index.html" class="menu-list__link link">Студія</a></li>
-                    <li class="menu-list__item"><a href="./portfolio.html" class="menu-list__link link">Портфоліо</a></li>
-                    <li class="menu-list__item"><a href="#" class="menu-list__link link">Контакти</a></li>
-                </ul>
+                    </button>
+                    <ul class="menu-list">
+                        <li class="menu-list__item"><a href="./index.html" class="menu-list__link link">Студія</a></li>
+                        <li class="menu-list__item"><a href="./portfolio.html" class="menu-list__link link">Портфоліо</a></li>
+                        <li class="menu-list__item"><a href="#" class="menu-list__link link">Контакти</a></li>
+                    </ul> 
+                </div>
+                <div class="mob-menu-bottom">    
+                <!-- <div class="mob-menu-contacts"> -->
+                    <a href="tel:+380961111111" class="mob-menu__tel">+38 096 111 11 11</a>
+                    <a href="mailto:info@devstudio.com" class="mob-menu__email">info@devstudio.com</a>   
+                <!-- </div> -->
                 
-                <a href="tel:+380961111111" class="mob-menu__tel">+38 096 111 11 11</a>
-                <a href="mailto:info@devstudio.com" class="mob-menu__email">info@devstudio.com</a>
-                    
-                <ul class="mob-soc">
-                    <li class="mob-soc__item"><a href="" class="mob-soc__link link" target="_blank" rel="noreferrer noopener">Instagram</a></li>
-                    <li class="mob-soc__item"><a href="" class="mob-soc__link link" target="_blank" rel="noreferrer noopener">Twitter</a></li>
-                    <li class="mob-soc__item"><a href="" class="mob-soc__link link" target="_blank" rel="noreferrer noopener">Facebook</a></li>
-                    <li class="mob-soc__item"><a href="" class="mob-soc__link link" target="_blank" rel="noreferrer noopener">LinkedIn</a></li>
-                </ul>
+                    <ul class="mob-soc">
+                        <li class="mob-soc__item"><a href="" class="mob-soc__link link" target="_blank" rel="noreferrer noopener">Instagram</a></li>
+                        <li class="mob-soc__item"><a href="" class="mob-soc__link link" target="_blank" rel="noreferrer noopener">Twitter</a></li>
+                        <li class="mob-soc__item"><a href="" class="mob-soc__link link" target="_blank" rel="noreferrer noopener">Facebook</a></li>
+                        <li class="mob-soc__item"><a href="" class="mob-soc__link link" target="_blank" rel="noreferrer noopener">LinkedIn</a></li>
+                    </ul>
+                </div>
             </div>
         </div>
         <!-- <div class="mobile-menu is-hidden" data-menu>
@@ -247,15 +252,13 @@
                             media="(min-width: 768px)"  />
                             <source srcset="./images/igor-mob.jpg 1x, ./images/igor-mob-2x.jpg 2x" 
                             media="(max-width: 767px)"  />
-                            <img 
-                            src="./images/igor-mob.jpg" 
-                            alt="Ігор посміхається" 
-                            width="450" style="display: block;">
+                            <img src="./images/igor-mob.jpg" 
+                            alt="Ігор посміхається" width="450">
                         </picture>
                         <h3 class="team__name">Ігор Дем'яненко</h3>
                         <p class="team__position">Product Designer</p>
                         <ul class="member__list">
-                            <!-- <li class="member__item">
+                            <li class="member__item">
                                 <a class="member__link link" href="#">
                                     <svg class="member__icon" width="20" height="20">
                                         <use href="./images/icons.svg#icon-instagram"></use>
@@ -282,7 +285,7 @@
                                         <use href="./images/icons.svg#icon-linkedin"></use>
                                     </svg>
                                 </a>
-                            </li> -->
+                            </li>
                         </ul>
                     </li>
                     <li class="team__member">
@@ -294,13 +297,12 @@
                             <source srcset="./images/olga-mob.jpg 1x, ./images/olga-mob-2x.jpg 2x" 
                             media="(max-width: 767px)"  />
                             <img src="./images/olga-mob.jpg" 
-                            alt="Ольга посміхається" 
-                            width="450" style="display: block;">
+                            alt="Ольга посміхається" width="450">
                         </picture>
                         <h3 class="team__name">Ольга Рєпіна</h3>
                         <p class="team__position">Frontend Developer</p>
                         <ul class="member__list">
-                            <!-- <li class="member__item">
+                            <li class="member__item">
                                 <a class="member__link link" href="#">
                                     <svg class="member__icon" width="20" height="20">
                                         <use href="./images/icons.svg#icon-instagram"></use>
@@ -327,7 +329,7 @@
                                         <use href="./images/icons.svg#icon-linkedin"></use>
                                     </svg>
                                 </a>
-                            </li> -->
+                            </li>
                         </ul>
                     </li>
                     <li class="team__member">
@@ -338,14 +340,14 @@
                             media="(min-width: 768px)"  />
                             <source srcset="./images/mukola-mob.jpg 1x, ./images/mukola-mob-2x.jpg 2x" 
                             media="(max-width: 767px)"  />
-                            <img src="./images/mukola-mob.jpg" 
+                            <img  src="./images/mukola-mob.jpg" 
                             alt="Микола посміхається" 
-                            width="450" style="display: block;">
+                            width="450">
                         </picture>
                         <h3 class="team__name">Микола Тарасов</h3>
                         <p class="team__position">Marketing</p>
                         <ul class="member__list">
-                            <!-- <li class="member__item">
+                            <li class="member__item">
                                 <a class="member__link link" href="#">
                                     <svg class="member__icon" width="20" height="20">
                                         <use href="./images/icons.svg#icon-instagram"></use>
@@ -372,7 +374,7 @@
                                         <use href="./images/icons.svg#icon-linkedin"></use>
                                     </svg>
                                 </a>
-                            </li> -->
+                            </li>
                         </ul>
                     </li>
                     <li class="team__member">
@@ -384,13 +386,12 @@
                             <source srcset="./images/mikhailo-mob.jpg 1x, ./images/mikhailo-mob-2x.jpg 2x" 
                             media="(max-width: 767px)"  />
                             <img src="./images/mikhailo-mob.jpg" 
-                            alt="Михайло посміхається" 
-                            width="450" style="display: block;">
+                            alt="Михайло посміхається" width="450">
                         </picture>
                         <h3 class="team__name">Михайло Єрмаков</h3>
                         <p class="team__position">UI Designer</p>
                         <ul class="member__list">
-                            <!-- <li class="member__item">
+                            <li class="member__item">
                                 <a class="member__link link" href="#">
                                     <svg class="member__icon" width="20" height="20">
                                         <use href="./images/icons.svg#icon-instagram"></use>
@@ -417,7 +418,7 @@
                                         <use href="./images/icons.svg#icon-linkedin"></use>
                                     </svg>
                                 </a>
-                            </li> -->
+                            </li>
                         </ul>
                     </li>
                 </ul>
@@ -542,5 +543,6 @@
         </div>
     </footer> -->
     <script src="./js/modal.js"></script>
+    <script src="./js/mobile-menu.js"></script>
 </body>
 </html>
