add some corrections

--- a/index.html
+++ b/index.html
@@ -441,6 +441,7 @@
 
     <footer class="footer">
         <div class="container footer-container">
+            <div class="footer-top">
             <div class="adr">
                 <a href="./index.html" class="logo-footer">Web<span class="logo-footer-secondary">Studio</span></a>
                 <address>
@@ -491,8 +492,9 @@
                 </li>
             </ul>
             </div>
+            </div>
             <form class="footer-form">
-                <label>
+                <label class="footer-label">
                     Підпишіться на розсилку
                     <input type="email" placeholder="E-mail" class="footer-input" required>
                 </label>
